Update contact timing to include Sundays

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <p><strong>Address:</strong> Aundh, Pune</p>
         <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
         <p><strong>Email:</strong> info@radiovisiondiagnostics.com</p>
-        <p><strong>Timing:</strong> Mon-Sat | 8 AM – 8 PM</p>
+        <p><strong>Timing:</strong> Mon-Sun | 8 AM – 12 AM</p>
     </div>
 </section>
 
