Refactor index.html for improved layout and content
Updated the HTML structure and styling for better design and readability. Enhanced service descriptions and added a WhatsApp button for contact.

--- a/index.html
+++ b/index.html
@@ -1,180 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Radiovision Diagnostic Centre</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Radiovision Diagnostic Centre</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+<style>
+:root {
+    --primary: #0b5ed7;
+    --secondary: #084298;
+    --light: #f5f8ff;
+    --text: #333;
+}
 
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            line-height: 1.6;
-            color: #333;
-        }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        /* Header */
-        header {
-            background: #0a4da2;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
+body {
+    font-family: "Segoe UI", Arial, sans-serif;
+    color: var(--text);
+    background: #fff;
+}
 
-        header h1 {
-            font-size: 28px;
-        }
+/* HEADER */
+header {
+    background: linear-gradient(90deg, var(--primary), var(--secondary));
+    color: #fff;
+    padding: 25px 15px;
+    text-align: center;
+}
 
-        header p {
-            font-size: 14px;
-            margin-top: 8px;
-        }
+header h1 {
+    font-size: 30px;
+}
 
-        /* Navigation */
-        nav {
-            background: #063970;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
+header p {
+    margin-top: 8px;
+    font-size: 15px;
+    opacity: 0.95;
+}
 
-        nav a {
-            color: #fff;
-            padding: 12px 18px;
-            text-decoration: none;
-            font-weight: bold;
-        }
+/* NAV */
+nav {
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
 
-        nav a:hover {
-            background: #0a4da2;
-        }
+nav a {
+    padding: 14px 18px;
+    color: var(--secondary);
+    text-decoration: none;
+    font-weight: 600;
+}
 
-        /* Hero */
-        .hero {
-            background: #eaf2ff;
-            padding: 60px 20px;
-            text-align: center;
-        }
+nav a:hover {
+    background: var(--light);
+}
 
-        .hero h2 {
-            font-size: 26px;
-            color: #063970;
-        }
+/* HERO */
+.hero {
+    background: var(--light);
+    padding: 70px 20px;
+    text-align: center;
+}
 
-        .hero p {
-            max-width: 700px;
-            margin: 15px auto;
-            font-size: 16px;
-        }
+.hero h2 {
+    font-size: 28px;
+    color: var(--secondary);
+}
 
-        /* Section common */
-        section {
-            padding: 50px 20px;
-            max-width: 1200px;
-            margin: auto;
-        }
+.hero p {
+    max-width: 720px;
+    margin: 15px auto;
+    font-size: 16px;
+}
 
-        section h2 {
-            text-align: center;
-            color: #063970;
-            margin-bottom: 30px;
-        }
+/* SECTION */
+section {
+    max-width: 1200px;
+    margin: auto;
+    padding: 60px 20px;
+}
 
-        /* Services */
-        .services-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-        }
+section h2 {
+    text-align: center;
+    color: var(--secondary);
+    margin-bottom: 40px;
+    font-size: 26px;
+}
 
-        .service-box {
-            background: #f4f6f8;
-            padding: 25px;
-            border-radius: 8px;
-            text-align: center;
-        }
+/* ABOUT */
+.about p {
+    max-width: 900px;
+    margin: auto;
+    text-align: center;
+    font-size: 16px;
+}
 
-        .service-box h3 {
-            margin-bottom: 10px;
-            color: #0a4da2;
-        }
+/* SERVICES */
+.services-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+}
 
-        /* About */
-        .about p {
-            max-width: 900px;
-            margin: auto;
-            font-size: 16px;
-            text-align: center;
-        }
+.service-card {
+    background: #fff;
+    padding: 30px 20px;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+    text-align: center;
+    transition: 0.3s;
+}
 
-        /* Contact */
-        .contact-box {
-            text-align: center;
-            font-size: 16px;
-        }
+.service-card:hover {
+    transform: translateY(-6px);
+}
 
-        .contact-box p {
-            margin: 10px 0;
-        }
+.service-card h3 {
+    color: var(--primary);
+    margin-bottom: 10px;
+}
 
-        /* Footer */
-        footer {
-            background: #063970;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            margin-top: 40px;
-            font-size: 14px;
-        }
+/* CONTACT */
+.contact-box {
+    background: var(--light);
+    padding: 35px;
+    border-radius: 12px;
+    text-align: center;
+    font-size: 16px;
+}
 
-        /* ---------- Responsive ---------- */
+.contact-box p {
+    margin: 10px 0;
+}
 
-        /* Tablet */
-        @media (max-width: 900px) {
-            .services-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
+/* FOOTER */
+footer {
+    background: var(--secondary);
+    color: #fff;
+    text-align: center;
+    padding: 15px;
+    font-size: 14px;
+}
 
-            header h1 {
-                font-size: 24px;
-            }
-        }
+/* WHATSAPP BUTTON */
+.whatsapp-btn {
+    position: fixed;
+    right: 18px;
+    bottom: 18px;
+    background: #25D366;
+    color: white;
+    padding: 14px 16px;
+    border-radius: 50%;
+    font-size: 22px;
+    text-decoration: none;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.3);
+    z-index: 100;
+}
 
-        /* Mobile */
-        @media (max-width: 600px) {
-            nav {
-                flex-direction: column;
-            }
+/* RESPONSIVE */
+@media (max-width: 900px) {
+    .services-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
 
-            .hero h2 {
-                font-size: 22px;
-            }
+@media (max-width: 600px) {
+    header h1 {
+        font-size: 24px;
+    }
 
-            .hero p {
-                font-size: 15px;
-            }
+    .hero h2 {
+        font-size: 22px;
+    }
 
-            .services-grid {
-                grid-template-columns: 1fr;
-            }
+    nav {
+        flex-direction: column;
+    }
 
-            section {
-                padding: 35px 15px;
-            }
-        }
-    </style>
+    .services-grid {
+        grid-template-columns: 1fr;
+    }
+
+    section {
+        padding: 45px 15px;
+    }
+}
+</style>
 </head>
 
 <body>
 
 <header>
     <h1>Radiovision Diagnostic Centre</h1>
-    <p>Trusted Imaging & Diagnostic Services</p>
+    <p>Advanced Imaging • Accurate Reports • Trusted Care</p>
 </header>
 
 <nav>
@@ -184,19 +212,19 @@
 </nav>
 
 <div class="hero">
-    <h2>Advanced Diagnostic Solutions</h2>
+    <h2>Reliable Diagnostic & Imaging Services</h2>
     <p>
-        Radiovision provides accurate, fast and reliable diagnostic services using modern
-        imaging technology and experienced medical professionals.
+        We deliver precise diagnostic results using modern technology
+        and experienced medical professionals.
     </p>
 </div>
 
 <section id="about" class="about">
     <h2>About Radiovision</h2>
     <p>
-        Radiovision Diagnostic Centre is committed to delivering high-quality diagnostic and
-        imaging services including MRI, CT Scan, X-Ray, Ultrasound and Pathology tests.
-        Our focus is precision, patient care and timely reports.
+        Radiovision Diagnostic Centre offers comprehensive imaging and
+        pathology services including MRI, CT Scan, Digital X-Ray,
+        Ultrasound and preventive health packages with patient-first care.
     </p>
 </section>
 
@@ -204,34 +232,34 @@
     <h2>Our Services</h2>
 
     <div class="services-grid">
-        <div class="service-box">
+        <div class="service-card">
             <h3>MRI Scan</h3>
-            <p>High-resolution MRI imaging with advanced technology.</p>
+            <p>High quality MRI imaging with accurate reporting.</p>
         </div>
 
-        <div class="service-box">
+        <div class="service-card">
             <h3>CT Scan</h3>
-            <p>Fast and accurate CT scanning services.</p>
+            <p>Fast and advanced CT scan services.</p>
         </div>
 
-        <div class="service-box">
+        <div class="service-card">
             <h3>Digital X-Ray</h3>
-            <p>Low radiation, instant digital X-ray reports.</p>
+            <p>Low radiation, instant digital reports.</p>
         </div>
 
-        <div class="service-box">
+        <div class="service-card">
             <h3>Ultrasound</h3>
-            <p>Safe and reliable ultrasound imaging.</p>
+            <p>Safe and reliable ultrasound diagnostics.</p>
         </div>
 
-        <div class="service-box">
+        <div class="service-card">
             <h3>Pathology Lab</h3>
-            <p>Complete range of blood and lab tests.</p>
+            <p>Complete lab testing with quick turnaround.</p>
         </div>
 
-        <div class="service-box">
+        <div class="service-card">
             <h3>Health Packages</h3>
-            <p>Preventive health checkup packages.</p>
+            <p>Preventive health checkup solutions.</p>
         </div>
     </div>
 </section>
@@ -240,16 +268,24 @@
     <h2>Contact Us</h2>
 
     <div class="contact-box">
-        <p><strong>Address:</strong> Aundh, Pune</p>
-        <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
-        <p><strong>Email:</strong> info@radiovisiondiagnostics.com</p>
-        <p><strong>Timing:</strong> Mon-Sun | 8 AM – 12 AM</p>
+        <p><strong>📍 Address:</strong> Aundh, Pune</p>
+        <p><strong>📞 Phone:</strong> +91-XXXXXXXXXX</p>
+        <p><strong>✉ Email:</strong> info@radiovisiondiagnostics.com</p>
+        <p><strong>⏰ Timing:</strong> Mon-Sun | 8 AM – 12 AM</p>
     </div>
 </section>
 
 <footer>
     © 2026 Radiovision Diagnostic Centre. All Rights Reserved.
 </footer>
+
+<!-- WhatsApp Button -->
+<a class="whatsapp-btn"
+   href="https://wa.me/91XXXXXXXXXX"
+   target="_blank"
+   title="Chat on WhatsApp">
+    🟢
+</a>
 
 </body>
 </html>
