Refactor HTML and CSS for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@ header{
     padding:22px;
     text-align:center;
 }
-header a{
-    color:#fff;
-    text-decoration:none;
-}
+header a{color:#fff;text-decoration:none}
 header h1{font-size:30px}
 header p{margin-top:6px;font-size:14px}
 
@@ -38,7 +35,6 @@ nav{
     background:#fff;
     display:flex;
     justify-content:center;
-    align-items:center;
     box-shadow:0 2px 8px rgba(0,0,0,.08);
     position:sticky;
     top:0;
@@ -52,28 +48,32 @@ nav{
 }
 .nav-links a:hover{background:var(--light)}
 
-/* HAMBURGER (MOBILE ONLY) */
+/* HAMBURGER (MOBILE) */
 .menu-btn{
     display:none;
     position:fixed;
-    top:18px;
-    right:18px;
-    font-size:28px;
-    color:var(--secondary);
+    top:16px;
+    right:16px;
+    width:44px;
+    height:44px;
+    background:var(--secondary);
+    color:#fff;
+    border-radius:50%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:26px;
     cursor:pointer;
-    z-index:300;
+    z-index:500;
 }
 
 /* OVERLAY */
 #overlay{
     position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
+    inset:0;
     background:rgba(0,0,0,.4);
     display:none;
-    z-index:90;
+    z-index:300;
 }
 #overlay.active{display:block}
 
@@ -86,13 +86,13 @@ nav{
     height:100%;
     background:#fff;
     box-shadow:-4px 0 12px rgba(0,0,0,.2);
-    padding-top:70px;
+    padding-top:80px;
     transition:.3s;
-    z-index:100;
+    z-index:400;
 }
 .drawer a{
     display:block;
-    padding:15px 20px;
+    padding:16px 22px;
     color:var(--secondary);
     text-decoration:none;
     font-weight:600;
@@ -182,7 +182,7 @@ footer{
 }
 @media(max-width:600px){
     .nav-links{display:none}
-    .menu-btn{display:block}
+    .menu-btn{display:flex}
     .services-grid{grid-template-columns:1fr}
     header h1{font-size:24px}
 }
@@ -206,6 +206,7 @@ footer{
     </div>
 </nav>
 
+<!-- MOBILE HAMBURGER -->
 <div class="menu-btn" onclick="toggleDrawer()">☰</div>
 
 <div id="overlay" onclick="closeDrawer()"></div>
@@ -225,8 +226,7 @@ footer{
     <h2>About Radiovision</h2>
     <p style="text-align:center;max-width:900px;margin:auto">
         Radiovision Diagnostic Centre provides MRI, CT Scan, Digital X-Ray,
-        Ultrasound and Pathology services with a strong focus on accuracy
-        and patient-first care.
+        Ultrasound and Pathology services with patient-first care.
     </p>
 </section>
 
@@ -248,4 +248,29 @@ footer{
         <p><b>📍 Address:</b> Aundh, Pune</p>
         <p><b>📞 Phone:</b> +91-XXXXXXXXXX</p>
         <p><b>✉ Email:</b> info@radiovisiondiagnostics.com</p>
-        <p><b>⏰ Timing:
+        <p><b>⏰ Timing:</b> Mon–Sun | 8 AM – 12 AM</p>
+    </div>
+</section>
+
+<footer>
+    © 2026 Radiovision Diagnostic Centre
+</footer>
+
+<div class="float-wrap">
+    <a href="tel:+91XXXXXXXXXX" class="float-btn call">📞 Call Now</a>
+    <a href="https://wa.me/91XXXXXXXXXX" target="_blank" class="float-btn whatsapp">💬 WhatsApp</a>
+</div>
+
+<script>
+function toggleDrawer(){
+    document.getElementById("drawer").classList.add("active");
+    document.getElementById("overlay").classList.add("active");
+}
+function closeDrawer(){
+    document.getElementById("drawer").classList.remove("active");
+    document.getElementById("overlay").classList.remove("active");
+}
+</script>
+
+</body>
+</html>
