Change header background gradient colors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body{
 
 /* HEADER */
 header{
-    background:linear-gradient(90deg,var(--primary),var(--secondary));
+    background: linear-gradient(90deg, #ffe5e5, #ffd6d6);
     padding:22px;
     text-align:center;
 }
