Change header background gradient colors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body{
 
 /* HEADER */
 header{
-    background: linear-gradient(90deg, #ffe5e5, #ffd6d6);
+    background: linear-gradient(90deg, #f8d7da, #f5c2c7);
     padding:22px;
     text-align:center;
 }
