--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body{
 
 /* HEADER */
 header{
-    background: linear-gradient(90deg, #f8d7da, #f5c2c7);
+    background: linear-gradient(90deg, #f3b7b9, #ef9a9a);
     padding:22px;
     text-align:center;
 }
